--- a/Diego/perfilDiego.html
+++ b/Diego/perfilDiego.html
@@ -14,11 +14,11 @@
       </div>
       <div class="acerca-de-d">
         <h1>Sobre mí</h1>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
+        <p><strong>Nombre: </strong> Diego Alexis Vázquez Sotelo</p>
+        <p><strong>Carrera: </strong>Ing. en Desarrollo y Gestión de Software</p>
+        <p><strong>Hobbies: </strong>Videojuegos 🎮</p>
       </div>
+      
     </div>
   </div>
 </body>
